# toml-repo

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/toml_repo/: __init__.py  manager.py  repo.py
tests/: conftest.py  test_repo_imports.py  test_repo_manager.py
